others/ingress-nginx/ingress-kibana.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: k8s.kibana.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kb-kibana
          servicePort: 5601
